# Machine-Learning-Pipeline

./: .vercelignore  Readme.md  folder_structure  main.py  mycotoxin_prediction_report.tex  requirements.txt  vercel.json  vomitoxin_analysis_report.tex
Data Science & Analytics/: EDA.ipynb  Y_data.csv
Data Science & Analytics/outputs/: correlation_matrix.xlsx
Machine Learning/: DL_Trainer.ipynb  ML_trainer.ipynb  Trainer.ipynb  interpretability.py
Machine Learning/interpretability_analysis/run_20250316_225436/: shap_feature_importance.csv
Machine Learning/interpretability_analysis/run_20250316_225933/: shap_feature_importance.csv
Machine Learning/interpretability_analysis/run_20250316_230156/: shap_feature_importance.csv
api/: index.py
backend/app/: main.py
backend/app/database/: connection.py
backend/app/repositories/: prediction.py
backend/app/resources/model_artifacts/: don_prediction_model.pt  model_info.json
backend/app/routes/: prediction.py
backend/app/schemas/: prediction.py
backend/app/services/: ml_model.py
backend/app/settings/: config.py
backend/app/utils/: google_drive.py
backend/tests/: pyproject.toml  test_ml_model.py  test_prediction.py  test_repository.py  test_routes.py
frontend/: app.py  requirements.txt
frontend/utils/: api.py
requirements/: requirements.txt
streamlit_app/: app.py  requirements.txt
streamlit_app/.streamlit/: config.toml
streamlit_app/backend/: .env.example  pyproject.toml
streamlit_app/backend/app/: main.py
streamlit_app/backend/app/database/: connection.py
streamlit_app/backend/app/database/__pycache__/: connection.py
streamlit_app/backend/app/models/: prediction.py
streamlit_app/backend/app/repositories/: prediction.py
streamlit_app/backend/app/routes/: prediction.py
streamlit_app/backend/app/services/: ml_model.py
streamlit_app/backend/tests/: pytest.ini
(+1 files in other folders)
